# hwsurvey

./: Cargo.toml  README.md  buildup.ps1  compose.yml  start_backend_in_docker.sh
client/: Cargo.toml
client/examples/: print_payload.rs  print_sysinfo.rs
client/simdsp_bridge/: CMakeLists.txt
client/simdsp_bridge/src/: simdsp_bridge.cpp
client/src/: build_payload.rs  lib.rs  sender.rs  simdsp_bridge.rs
dockerfiles/: backend  postgres_hll
payloads/: Cargo.toml
payloads/src/: lib.rs  memory.rs  simdsp_bridger.rs
server/: Cargo.toml
server/migrations/: V1__initial.sql
server/src/: anonymization.rs  main.rs  rows.rs  writer.rs
server/src/api/: mod.rs  report_v1.rs  submit_v1.rs
simdsp_bridger/: Cargo.toml  build.rs
simdsp_bridger/simdsp_bridge/: CMakeLists.txt
simdsp_bridger/src/: lib.rs
voyager/: Cargo.toml
voyager/src/: main.rs
