[package]
name = "hwsurvey_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
hex = "0.4.3"
hwsurvey_payloads = { path = "../payloads" }
hwsurvey_simdsp_bridger = { path = "../simdsp_bridger" }
log = "0.4.17"
mac_address = "1.1.3"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
sysinfo = "0.23.13"
