[package]
name = "hwsurvey_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-channel = "1.6.1"
bytes = "1.1.0"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
hwsurvey_payloads = { path = "../payloads" }
log = "0.4.17"
only_every = "0.1.0"
refinery = { version = "0.8.4", features = ["tokio-postgres"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
tokio-postgres = "0.7.6"
warp = "0.3.2"

[features]
