[package]
name = "hwsurvey_voyager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
hwsurvey_client = { path = "../client" }
log = "0.4.17"
